# video-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README_CN.md  README_EN.md  README_HAN.md  README_VI.md  bilibili_cookies.txt  config.example.yaml  config.yaml  cookies.txt  main.py  opencode.config.json  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit
docs/: requirements.md  产品功能说明书(PRD).md  安全事件记录.md  安全工程方法论.md  实施前检查清单.md  工作进展记录.md  技术架构设计说明书.md  插件化设计.md  概要设计说明书.md  测试记录文档.md  用户使用说明书.md  用户测试文档.md  详细设计说明书.md  配置系统测试指南.md  里程碑和开发计划.md  验收测试计划.md
docs/superpowers/plans/: 2026-06-26-v1.5-bugfix-release.md  2026-06-26-v2.0-alpha-danmaku-plugins.md
examples/plugin-example-danmaku/: pyproject.toml
examples/plugin-example-danmaku/src/video_agent_skill_plugin_example/: __init__.py
prompts/: default-danmaku.txt  default-system.txt  default-video-summary.txt
scripts/: env_test.py  probe-metadata.ps1  smoke-full.ps1  smoke-llm.ps1  smoke-transcript.ps1  to_markdown.py
src/video_agent_skill/: __init__.py  cli.py  config.yaml  config_init.py  contracts.py  doctor.py  errors.py  prompt_files.py  runtime.py
src/video_agent_skill/core/: __init__.py  anticrawler.py  danmaku.py  extractor.py  plugin_registry.py  (+2 more)
tests/: __init__.py  test_anticrawler.py  test_asr_engine.py  test_cli_contract.py  test_cli_plugins.py  test_config.py  test_danmaku_provider.py  test_doctor.py  test_extractor.py  test_integration.py  test_plugin_registry.py  test_prompt_files.py  test_runtime.py  test_summarizer.py  test_transcriber.py
(+6 files in other folders)
